code audit and cleanup

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,11 @@ CUSTOM_LLM_API_KEY=your_custom_llm_key_here
 # System Configuration
 REDIS_URL=redis://redis:6379/0
 RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
+
+# Security Configuration (for dev environment)
+REDIS_PASSWORD=redis123
+RABBITMQ_USER=admin
+RABBITMQ_PASSWORD=secure123
 WEBGUI_HOST=0.0.0.0
 WEBGUI_PORT=8000
 LOG_LEVEL=INFO
