--- a/agents/manager/Dockerfile
+++ b/agents/manager/Dockerfile
@@ -1,5 +1,8 @@
 FROM python:3.11-slim
 
+# Create non-root user
+RUN groupadd -r appuser && useradd -r -g appuser appuser
+
 WORKDIR /app
 
 # Install system dependencies
@@ -20,16 +23,19 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY agents/manager/ ./agents/manager/
 COPY config/ ./config/
 
-# Create logs directory
-RUN mkdir -p logs
+# Create logs directory with proper permissions
+RUN mkdir -p logs && chown -R appuser:appuser /app
 
 # Set environment variables
 ENV PYTHONPATH=/app
 ENV AGENT_ROLE=manager
 
+# Switch to non-root user
+USER appuser
+
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8001/health || exit 1
+    CMD python -c "import requests; requests.get('http://localhost:8001/health')" || exit 1
 
 # Expose port for health checks
 EXPOSE 8001
