--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,17 @@ CUSTOM_LLM_MODEL=custom-model
 CUSTOM_LLM_API_KEY=your_custom_llm_key_here
 
 # System Configuration
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PASSWORD=
 REDIS_URL=redis://redis:6379/0
+
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_PORT=5672
+RABBITMQ_USER=guest
+RABBITMQ_PASSWORD=guest
+RABBITMQ_VHOST=/
 RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
 
 # Security Configuration (for dev environment)
