--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,8 +7,9 @@ on:
     branches: [main, develop]
 
 env:
+  PYTHON_VERSION: '3.11'
   NODE_VERSION: '20.x'
-  REGISTRY: ghcr.io/your-org/qa-system
+  REGISTRY: ghcr.io/${{ github.repository_owner }}/qa-system
   DOCKER_BUILDKIT: docker/buildx
   ACTIONS_ALLOW_UNSECURE_COMMANDS: false
   TZ: UTC
@@ -44,27 +45,84 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: ${{ env.PYTHON_VERSION }}
       
       - name: Install dependencies
         run: |
-          pip install flake8 black isort
-          npm install -g eslint prettier
+          pip install flake8 black isort mypy ruff
+          npm install -g eslint prettier || true
       
       - name: Run Python linting
         run: |
-          flake8 agentic/ --max-line-length=88 --ignore=E203,W503
-          black --check agentic/
-          isort --check-only agentic/
+          # Check main directories (not just agentic/)
+          ruff check agents/ config/ shared/ webgui/ --format=github
+          black --check agents/ config/ shared/ webgui/
+          isort --check-only agents/ config/ shared/ webgui/
+          mypy agents/ config/ shared/ --ignore-missing-imports || true
+      
+      - name: Run type checking
+        run: |
+          mypy --strict agents/ config/ shared/ --ignore-missing-imports || true
       
       - name: Run JavaScript linting
         run: |
-          eslint agentic/webgui/ --ext .js,.jsx,.ts,.tsx || true
-          prettier --check agentic/webgui/ || true
+          eslint webgui/ --ext .js,.jsx,.ts,.tsx || true
+          prettier --check webgui/ || true
 
   # Build and Test
   build-and-test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        test-mode: [unit, integration]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+          cache: 'pip'
+      
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
+          pip install -r requirements-dev.txt || echo "No dev requirements file"
+      
+      - name: Set up test environment
+        run: |
+          # Set up environment variables for testing
+          echo "REDIS_HOST=localhost" >> $GITHUB_ENV
+          echo "RABBITMQ_HOST=localhost" >> $GITHUB_ENV
+          echo "LOG_LEVEL=DEBUG" >> $GITHUB_ENV
+          
+          # Start test services for integration tests
+          if [ "${{ matrix.test-mode }}" == "integration" ]; then
+            docker-compose -f docker-compose.test.yml up -d redis-test rabbitmq-test
+            sleep 10
+          fi
+      
+      - name: Run tests
+        run: |
+          python run_tests.py --mode ${{ matrix.test-mode }} --env $([ "${{ matrix.test-mode }}" == "integration" ] && echo "docker" || echo "mock")
+      
+      - name: Upload coverage reports
+        if: matrix.test-mode == 'unit'
+        uses: codecov/codecov-action@v4
+        with:
+          file: ./coverage.xml
+          flags: unittests
+      
+      - name: Cleanup test services
+        if: matrix.test-mode == 'integration'
+        run: |
+          docker-compose -f docker-compose.test.yml down -v || true
+
+  # Container Build and Security Scan
+  container-build:
+    runs-on: ubuntu-latest
+    needs: [code-quality, build-and-test]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -74,36 +132,38 @@ jobs:
       
       - name: Build containers
         run: |
-          docker-compose -f agentic/docker-compose.yml build --no-cache
+          # Build main containers
+          docker-compose -f docker-compose.yml build --no-cache
+          
+          # Build test containers
+          docker-compose -f docker-compose.test.yml build --no-cache
       
-      - name: Run tests
+      - name: Test container health
         run: |
-          cd agentic
-          pip install -r requirements.txt
-          pytest tests/ --cov=agents/ --cov=webgui --cov-report=xml || true
-      
-      - name: Upload coverage reports
-        uses: codecov/codecov-action@v3
-        with:
-          file: ./agentic/coverage.xml
-
+          # Test basic container functionality
+          docker-compose -f docker-compose.yml up -d redis rabbitmq
+          sleep 10
+          
+          # Check Redis connection
+          docker-compose exec -T redis redis-cli ping
+          
+          # Check RabbitMQ connection  
+          docker-compose exec -T rabbitmq rabbitmq-diagnostics ping
+          
+          docker-compose -f docker-compose.yml down
+  
   # Container Security Scan
   container-scan:
     runs-on: ubuntu-latest
-    needs: build-and-test
+    needs: container-build
     steps:
-      - name: Run Trivy on containers
+      - name: Run Trivy on local containers
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: |
-            ghcr.io/your-org/qa-system/webgui:latest
-            ghcr.io/your-org/qa-system/performance:latest
-            ghcr.io/your-org/qa-system/security-compliance:latest
-            ghcr.io/your-org/qa-system/resilience:latest
-            ghcr.io/your-org/qa-system/user-experience:latest
-            ghcr.io/your-org/qa-system/senior:latest
-            ghcr.io/your-org/qa-system/junior:latest
-            ghcr.io/your-org/qa-system/qa-manager:latest
+            qa-system_redis:latest
+            qa-system_rabbitmq:latest
+            qa-system_webgui:latest
           format: 'sarif'
           output: 'container-trivy-results.sarif'
 
