--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,11 @@ chainlit==1.1.304
 playwright==1.45.0
 pytest==8.3.2
 pytest-playwright==0.5.2
+pytest-cov==5.0.0
+pytest-mock==3.14.0
+pytest-asyncio==0.23.8
+pytest-xdist==3.6.1
+coverage==7.6.1
 opencv-python==4.10.0.84
 numpy==1.26.4
 pandas==2.2.2
