--- a/requirements.txt
+++ b/requirements.txt
@@ -31,3 +31,19 @@ typer==0.12.5
 pyyaml==6.0.2
 gitpython==3.1.43
 faker==26.0.0
+
+# WebGUI Enhancement Dependencies
+pyjwt==2.9.0
+authlib==1.3.1
+reportlab==4.2.0
+weasyprint==61.2
+openpyxl==3.1.5
+matplotlib==3.9.2
+plotly==5.24.1
+python-multipart==0.0.9
+aiofiles==24.1.0
+itsdangerous==2.2.0
+passlib==1.7.4
+bcrypt==4.2.0
+email-validator==2.2.0
+python-dateutil==2.9.0.post0
