refactor: comprehensive code and documentation audit - v1.1.0
- Remove redundant documentation and non-existent agent implementations
- Fix agent count discrepancies (10 → 6 agents across all docs)
- Standardize repository structure and follow git best practices
- Add .gitignore, CONTRIBUTING.md, CHANGELOG.md, feature request template
- Update docker-compose.yml to match actual agent implementations
- Clean up utility scripts and outdated documentation files
- Create proper performance agent implementation
- Consolidate and organize top-level documentation

Breaking Changes:
- Removed non-existent agent directories (accessibility, api, chaos, etc.)
- Updated all architecture references to 6-agent structure
- Cleaned up service dependencies in docker-compose.yml

Features:
- Added comprehensive contribution guidelines
- Implemented proper changelog tracking
- Enhanced GitHub issue templates
- Improved developer onboarding experience

--- a/agents/performance/Dockerfile
+++ b/agents/performance/Dockerfile
@@ -4,19 +4,24 @@ WORKDIR /app
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
-    gcc \
-    g++ \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements first for better caching
+# Copy requirements and install Python dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy agent code
-COPY ./agents/performance/qa_performance.py /app/qa_performance.py
+COPY agents/performance/ ./agents/performance/
+COPY config/ ./config/
+COPY shared/ ./shared/
 
-# Set Python path
+# Create logs directory
+RUN mkdir -p logs
+
+# Set environment variables
 ENV PYTHONPATH=/app
+ENV AGENT_ROLE=performance
 
-# Default command
-CMD ["python", "qa_performance.py"]
+# Run the performance agent
+CMD ["python", "-m", "agents.performance.qa_performance"]
