--- a/docker-compose.tls.yml
+++ b/docker-compose.tls.yml
@@ -5,10 +5,19 @@ services:
     image: redis:7-alpine
     ports:
       - "6379:6379"
+      - "6380:6380"
     networks:
       - qa-network
     volumes:
       - redis_data:/data
+      - ./certs:/certs:ro
+    command: >
+      --port 6379
+      --tls-port 6380
+      --tls-cert-file /certs/redis.pem
+      --tls-key-file /certs/redis-key.pem
+      --tls-ca-cert-file /certs/ca.pem
+      --tls-auth-clients no
     deploy:
       resources:
         limits:
@@ -23,7 +32,9 @@ services:
     image: rabbitmq:3-management-alpine
     ports:
       - "5672:5672"
+      - "5673:5673"
       - "15672:15672"
+      - "15673:15673"
     environment:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
@@ -31,6 +42,8 @@ services:
       - qa-network
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
+      - ./certs:/certs:ro
+      - ./tls/rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf:ro
     deploy:
       resources:
         limits:
@@ -46,8 +59,10 @@ services:
       context: .
       dockerfile: agents/manager/Dockerfile
     environment:
-      - REDIS_URL=redis://redis:6379/0
-      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
+      - REDIS_URL=rediss://redis:6380/0
+      - REDIS_CA_CERT=/certs/ca.pem
+      - RABBITMQ_URL=amqps://guest:guest@rabbitmq:5673/
+      - RABBITMQ_CA_CERT=/certs/ca.pem
       - AGENT_ROLE=manager
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     depends_on:
@@ -59,6 +74,7 @@ services:
       - ./agents:/app/agents
       - ./config:/app/config
       - ./logs:/app/logs
+      - ./certs:/certs:ro
     deploy:
       resources:
         limits:
@@ -79,8 +95,10 @@ services:
       context: .
       dockerfile: agents/senior/Dockerfile
     environment:
-      - REDIS_URL=redis://redis:6379/0
-      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
+      - REDIS_URL=rediss://redis:6380/0
+      - REDIS_CA_CERT=/certs/ca.pem
+      - RABBITMQ_URL=amqps://guest:guest@rabbitmq:5673/
+      - RABBITMQ_CA_CERT=/certs/ca.pem
       - AGENT_ROLE=senior
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     depends_on:
@@ -93,12 +111,7 @@ services:
       - ./config:/app/config
       - ./advanced_testing:/app/advanced_testing
       - ./logs:/app/logs
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-        labels: "service=senior-qa"
+      - ./certs:/certs:ro
     deploy:
       resources:
         limits:
@@ -119,8 +132,10 @@ services:
       context: .
       dockerfile: agents/junior/Dockerfile
     environment:
-      - REDIS_URL=redis://redis:6379/0
-      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
+      - REDIS_URL=rediss://redis:6380/0
+      - REDIS_CA_CERT=/certs/ca.pem
+      - RABBITMQ_URL=amqps://guest:guest@rabbitmq:5673/
+      - RABBITMQ_CA_CERT=/certs/ca.pem
       - AGENT_ROLE=junior
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     depends_on:
@@ -133,12 +148,7 @@ services:
       - ./config:/app/config
       - ./examples:/app/examples
       - ./logs:/app/logs
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-        labels: "service=junior-qa"
+      - ./certs:/certs:ro
     deploy:
       resources:
         limits:
@@ -159,8 +169,10 @@ services:
       context: .
       dockerfile: agents/analyst/Dockerfile
     environment:
-      - REDIS_URL=redis://redis:6379/0
-      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
+      - REDIS_URL=rediss://redis:6380/0
+      - REDIS_CA_CERT=/certs/ca.pem
+      - RABBITMQ_URL=amqps://guest:guest@rabbitmq:5673/
+      - RABBITMQ_CA_CERT=/certs/ca.pem
       - AGENT_ROLE=analyst
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     depends_on:
@@ -172,12 +184,7 @@ services:
       - ./agents:/app/agents
       - ./config:/app/config
       - ./logs:/app/logs
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-        labels: "service=qa-analyst"
+      - ./certs:/certs:ro
     deploy:
       resources:
         limits:
@@ -198,8 +205,10 @@ services:
       context: .
       dockerfile: agents/security_compliance/Dockerfile
     environment:
-      - REDIS_URL=redis://redis:6379/0
-      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
+      - REDIS_URL=rediss://redis:6380/0
+      - REDIS_CA_CERT=/certs/ca.pem
+      - RABBITMQ_URL=amqps://guest:guest@rabbitmq:5673/
+      - RABBITMQ_CA_CERT=/certs/ca.pem
       - AGENT_ROLE=security_compliance
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     depends_on:
@@ -211,6 +220,7 @@ services:
       - ./agents:/app/agents
       - ./config:/app/config
       - ./logs:/app/logs
+      - ./certs:/certs:ro
     deploy:
       resources:
         limits:
@@ -231,8 +241,10 @@ services:
       context: .
       dockerfile: agents/performance/Dockerfile
     environment:
-      - REDIS_URL=redis://redis:6379/0
-      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
+      - REDIS_URL=rediss://redis:6380/0
+      - REDIS_CA_CERT=/certs/ca.pem
+      - RABBITMQ_URL=amqps://guest:guest@rabbitmq:5673/
+      - RABBITMQ_CA_CERT=/certs/ca.pem
       - AGENT_ROLE=performance
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     depends_on:
@@ -244,6 +256,7 @@ services:
       - ./agents:/app/agents
       - ./config:/app/config
       - ./logs:/app/logs
+      - ./certs:/certs:ro
     deploy:
       resources:
         limits:
@@ -265,10 +278,15 @@ services:
       dockerfile: webgui/Dockerfile
     ports:
       - "8000:8000"
+      - "8443:8443"
     environment:
-      - REDIS_URL=redis://redis:6379/0
+      - REDIS_URL=rediss://redis:6380/0
+      - REDIS_CA_CERT=/certs/ca.pem
       - WEBGUI_HOST=0.0.0.0
       - WEBGUI_PORT=8000
+      - WEBGUI_TLS_PORT=8443
+      - WEBGUI_CERT_FILE=/certs/webgui.pem
+      - WEBGUI_KEY_FILE=/certs/webgui-key.pem
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     depends_on:
       - redis
@@ -281,15 +299,10 @@ services:
     networks:
       - qa-network
     volumes:
+      - ./webgui:/app/webgui
       - ./agents:/app/agents
-      - ./config:/app/config
       - ./logs:/app/logs
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-        labels: "service=qa-manager"
+      - ./certs:/certs:ro
     deploy:
       resources:
         limits:
