--- a/agents/manager/Dockerfile
+++ b/agents/manager/Dockerfile
@@ -1,44 +1,16 @@
-FROM python:3.11-slim
+# Use the optimized base image with all dependencies pre-installed
+FROM agnostic-qa-base:latest
 
-# Create non-root user
-RUN groupadd -r appuser && useradd -r -g appuser appuser
+# Copy agent-specific code (all dependencies already installed in base)
+COPY --chown=appuser:appuser agents/manager/ ./agents/manager/
+COPY --chown=appuser:appuser config/ ./config/
 
-WORKDIR /app
-
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    gcc \
-    g++ \
-    git \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
-
-# Copy requirements first for better caching
-COPY requirements.txt .
-
-# Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy agent code
-COPY agents/manager/ ./agents/manager/
-COPY config/ ./config/
-
-# Create logs directory with proper permissions
-RUN mkdir -p logs && chown -R appuser:appuser /app
-
-# Set environment variables
-ENV PYTHONPATH=/app
+# Set agent-specific environment variable
 ENV AGENT_ROLE=manager
-
-# Switch to non-root user
-USER appuser
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD python -c "import requests; requests.get('http://localhost:8001/health')" || exit 1
-
-# Expose port for health checks
-EXPOSE 8001
+    CMD python -c "import redis; import pika; print('healthy')" || exit 1
 
 # Run the QA Manager agent
 CMD ["python", "-m", "agents.manager.qa_manager"]
