--- a/agents/senior/Dockerfile
+++ b/agents/senior/Dockerfile
@@ -1,49 +1,12 @@
-FROM python:3.11-slim
+# Use the optimized base image with all dependencies pre-installed
+FROM agnostic-qa-base:latest
 
-WORKDIR /app
+# Copy agent-specific code (all dependencies already installed in base)
+COPY --chown=appuser:appuser agents/senior/ ./agents/senior/
+COPY --chown=appuser:appuser advanced_testing/ ./advanced_testing/
+COPY --chown=appuser:appuser config/ ./config/
 
-# Install system dependencies including OpenCV and other computer vision libraries
-RUN apt-get update && apt-get install -y \
-    gcc \
-    g++ \
-    git \
-    curl \
-    libgl1-mesa-glx \
-    libglib2.0-0 \
-    libsm6 \
-    libxext6 \
-    libxrender-dev \
-    libgomp1 \
-    libgthread-2.0-0 \
-    && rm -rf /var/lib/apt/lists/*
-
-# Copy requirements first for better caching
-COPY requirements.txt .
-
-# Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Install additional dependencies for senior QA
-RUN pip install --no-cache-dir \
-    opencv-python \
-    scikit-learn \
-    pandas \
-    numpy \
-    playwright
-
-# Install Playwright browsers
-RUN playwright install chromium
-
-# Copy agent code
-COPY agents/senior/ ./agents/senior/
-COPY advanced_testing/ ./advanced_testing/
-COPY config/ ./config/
-
-# Create logs directory
-RUN mkdir -p logs
-
-# Set environment variables
-ENV PYTHONPATH=/app
+# Set agent-specific environment variable
 ENV AGENT_ROLE=senior
 
 # Health check
