--- a/requirements.txt
+++ b/requirements.txt
@@ -22,8 +22,8 @@ requests==2.32.3
 aiohttp==3.10.5
 pydantic==2.8.2
 python-dotenv==1.0.1
-fastapi==0.112.0
-uvicorn==0.30.5
+fastapi==0.110.3
+uvicorn==0.25.0
 websockets==12.0
 jinja2==3.1.4
 rich==13.7.1
@@ -41,9 +41,10 @@ openpyxl==3.1.5
 matplotlib==3.9.2
 plotly==5.24.1
 python-multipart==0.0.9
-aiofiles==24.1.0
+aiofiles==23.2.1
 itsdangerous==2.2.0
 passlib==1.7.4
 bcrypt==4.2.0
 email-validator==2.2.0
 python-dateutil==2.9.0.post0
+setuptools==70.3.0
