--- a/.gitignore
+++ b/.gitignore
@@ -53,32 +53,6 @@ coverage.xml
 *.mo
 *.pot
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
 # pyenv
 .python-version
 
@@ -92,35 +66,15 @@ __pypackages__/
 celerybeat-schedule
 celerybeat.pid
 
-# SageMath parsed files
-*.sage.py
-
 # Environments
 .env
+.env.*
 .venv
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
 
 # IDE
 .vscode/
@@ -142,14 +96,10 @@ Thumbs.db
 logs/
 *.log
 
-# Docker
-.dockerignore
-
 # Temporary files
 tmp/
 temp/
 *.tmp
-*.temp
 
 # Database
 *.db
@@ -162,16 +112,25 @@ temp/
 *.p12
 secrets/
 
-# Node modules (if any)
-node_modules/
-
 # Build artifacts
-build/
-dist/
 target/
 
-# Agent-specific
-logs/
+# Development tools
+.mypy_cache/
+.dmypy.json
+dmypy.json
+.pyre/
+.ruff_cache/
+
+# Documentation builds
+docs/_build/
+/site
+
+# Pre-commit
+.pre-commit-config.yaml
+
+# Project-specific
+.chainlit/
 reports/
 test_results/
 coverage_reports/
@@ -180,3 +139,48 @@ coverage_reports/
 playwright-report/
 test-results/
 playwright/.cache/
+playwright/.auth/
+*.trace
+*.har
+
+# Infrastructure data
+rabbitmq/data/
+rabbitmq/log/
+redis/data/
+redis/dump.rdb
+*.rdb
+
+# ML/AI artifacts
+models/
+*.pkl
+*.joblib
+*.h5
+*.onnx
+
+# Session data
+sessions/
+session_data/
+*.session
+
+# Terraform
+*.tfstate
+*.tfstate.*
+.terraform/
+.terraform.lock.hcl
+
+# Session exports
+exports/
+*.export
+
+# Chainlit
+.chainlit/
+.webgui/
+
+# Generated test data
+test-output/
+artifacts/
+benchmark-results/
+load-test-results/
+
+# Profile data
+*.prof
