--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -145,6 +145,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
+      - name: Install Docker and Docker Compose
+        run: |
+          sudo apt update
+          sudo apt install -y ca-certificates curl gnupg
+          sudo install -m 0755 -d /etc/apt/keyrings
+          sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
+          sudo chmod a+r /etc/apt/keyrings/docker.asc
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo \"${UBUNTU_CODENAME:-$VERSION_CODENAME}\") stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+          sudo apt update
+          sudo apt install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+          sudo docker --version
+          sudo docker compose version
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       
@@ -202,6 +215,22 @@ jobs:
     runs-on: ubuntu-latest
     needs: [security-scan, code-quality, build-and-test, container-scan]
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Install Docker and Docker Compose
+        run: |
+          sudo apt update
+          sudo apt install -y ca-certificates curl gnupg
+          sudo install -m 0755 -d /etc/apt/keyrings
+          sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
+          sudo chmod a+r /etc/apt/keyrings/docker.asc
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo \"${UBUNTU_CODENAME:-$VERSION_CODENAME}\") stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+          sudo apt update
+          sudo apt install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+          sudo docker --version
+          sudo docker compose version
+      
       - name: Deploy to staging
         run: |
           docker-compose -f docker-compose.yml -f docker-compose.dev.yml up -d
@@ -217,6 +246,22 @@ jobs:
     runs-on: ubuntu-latest
     needs: [security-scan, code-quality, build-and-test, container-scan]
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Install Docker and Docker Compose
+        run: |
+          sudo apt update
+          sudo apt install -y ca-certificates curl gnupg
+          sudo install -m 0755 -d /etc/apt/keyrings
+          sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
+          sudo chmod a+r /etc/apt/keyrings/docker.asc
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo \"${UBUNTU_CODENAME:-$VERSION_CODENAME}\") stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+          sudo apt update
+          sudo apt install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+          sudo docker --version
+          sudo docker compose version
+      
       - name: Deploy to production
         run: |
           docker-compose -f docker-compose.prod.yml up -d
@@ -232,6 +277,22 @@ jobs:
     runs-on: ubuntu-latest
     if: always() && (needs.deploy-staging.result == 'success' || needs.deploy-production.result == 'success')
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Install Docker and Docker Compose
+        run: |
+          sudo apt update
+          sudo apt install -y ca-certificates curl gnupg
+          sudo install -m 0755 -d /etc/apt/keyrings
+          sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
+          sudo chmod a+r /etc/apt/keyrings/docker.asc
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo \"${UBUNTU_CODENAME:-$VERSION_CODENAME}\") stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+          sudo apt update
+          sudo apt install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+          sudo docker --version
+          sudo docker compose version
+      
       - name: Verify all services
         run: |
           docker-compose ps
@@ -251,6 +312,22 @@ jobs:
     runs-on: ubuntu-latest
     needs: [security-scan, code-quality, build-and-test, container-scan]
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Install Docker and Docker Compose
+        run: |
+          sudo apt update
+          sudo apt install -y ca-certificates curl gnupg
+          sudo install -m 0755 -d /etc/apt/keyrings
+          sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
+          sudo chmod a+r /etc/apt/keyrings/docker.asc
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo \"${UBUNTU_CODENAME:-$VERSION_CODENAME}\") stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+          sudo apt update
+          sudo apt install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+          sudo docker --version
+          sudo docker compose version
+      
       - name: Deploy blue environment
         run: |
           # Deploy with blue label for blue-green deployment
