--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,16 +40,19 @@ classifiers = [
     "Topic :: System :: Software Distribution",
     "Typing :: Typed",
 ]
-requires-python = ">=3.11"
+requires-python = ">=3.11,<3.14"  # Python 3.14 incompatible with: crewai 1.x, langchain 0.x, chainlit 1.x (all require pydantic v1)
 dependencies = [
-    "crewai>=0.75.0",
-    "langchain>=0.2.16",
+    "crewai>=0.11.0,<1.0.0",  # crewai 1.x requires Python <3.14; staying on 0.x for Python 3.14 compatibility
+    "langchain>=0.1.0,<0.2.0",  # crewai 0.x requires langchain <0.2
+    "langchain-openai>=0.0.5,<0.1.0",  # Required by crewai 0.x
+    "langchain-community>=0.0.38,<0.1.0",  # Required by crewai 0.x
     "redis>=5.0.8",
     "celery>=5.4.0",
     "pytest>=8.3.2",
 ]
 
 [project.optional-dependencies]
+# Dev tools - all updated to latest compatible versions
 dev = [
     "pytest-cov>=6.0.0",
     "pytest-mock>=3.14.0",
@@ -71,15 +74,15 @@ test = [
     "pytest-xdist>=3.6.1",
 ]
 web = [
-    "chainlit>=1.1.304",
+    "chainlit>=1.1.304,<2.0.0",  # chainlit 2.x requires Python <3.14
     "fastapi>=0.115.0",
     "uvicorn>=0.32.0",
     "websockets>=13.0",
 ]
 ml = [
-    "numpy>=2.0.0",
-    "pandas>=2.2.3",
-    "scikit-learn>=1.6.0",
+    "numpy>=1.26.4,<2.0.0",  # numpy 2.x incompatible with langchain 0.x (<2.0 requirement)
+    "pandas>=2.2.2",
+    "scikit-learn>=1.5.1",
     "opencv-python>=4.10.0.84",
 ]
 browser = [
