--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,8 @@ classifiers = [
     "Topic :: System :: Software Distribution",
     "Typing :: Typed",
 ]
-requires-python = ">=3.11,<3.14"  # Python 3.14 incompatible with: crewai 1.x, langchain 0.x, chainlit 1.x (all require pydantic v1)
+requires-python = ">=3.11,<3.15"
+
 dependencies = [
     "crewai>=0.11.0,<1.0.0",  # crewai 1.x requires Python <3.14; staying on 0.x for Python 3.14 compatibility
     "langchain>=0.1.0,<0.2.0",  # crewai 0.x requires langchain <0.2
@@ -50,6 +51,10 @@ dependencies = [
     "celery>=5.4.0",
     "pytest>=8.3.2",
 ]
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["agents*", "config*", "shared*", "webgui*", "advanced_testing*"]
 
 [project.optional-dependencies]
 # Dev tools - all updated to latest compatible versions
@@ -120,6 +125,8 @@ markers = [
 [tool.ruff]
 line-length = 88
 target-version = "py311"
+
+[tool.ruff.lint]
 select = [
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
@@ -130,7 +137,6 @@ select = [
     "UP", # pyupgrade
     "RUF", # Ruff-specific rules
     "TCH", # Type-checking imports
-    "PTH", # Use pathlib
     "PERF", # Performance optimizations
 ]
 ignore = [
@@ -138,10 +144,23 @@ ignore = [
     "B008",  # do not perform function calls in argument defaults
     "C901",  # too complex
     "RUF012", # Mutable class default
+    "PTH100", # os.path.abspath -> Path.resolve (low priority)
+    "PTH118", # os.path.join -> Path / operator (low priority)
+    "PTH120", # os.path.dirname -> Path.parent (low priority)
+    "PTH123", # open() -> Path.open() (low priority)
+    "PERF401", # list comprehension suggestions (low priority)
+    "RUF006", # asyncio.create_task not stored (low priority)
+    "E722",   # bare except (legacy code)
+    "E741",   # ambiguous variable names
+    "RUF001", # ambiguous unicode (generated text)
+    "B007",   # unused loop variable (legacy code)
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
+
+[tool.ruff.lint.isort]
+known-first-party = ["agents", "config", "shared", "webgui"]
 
 [tool.black]
 line-length = 100
@@ -237,4 +256,4 @@ skip_covered = false
 
 [tool.bandit]
 exclude_dirs = ["tests", "test_*"]
-skips = ["B101", "B601"]
+skips = ["B101", "B601", "B311", "B105", "B112"]
